src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__regproc__cast_reg_proc_to_oid__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/regproc.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Oid,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Oid,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastOidToRegProc(
            CastOidToRegProc,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
